# Furuta-Pendulum

./: .gitmodules  Pendulum General Notes.xlsx  README.md  justfile
documentation/: AS5048A Mag Pinout and Slipring Harness.xlsx  ODESC_4p2 Pinout.xlsx  Pendulum General Notes.xlsx
documentation/STM32F405/: STM_TIMER_reg_notes.txt
documentation/V2.0/: Moteus x1 Pinout.xlsx  STM32G474CEx GPIO Alternate Function Mapping.csv  moteus_x1_BOM.xlsx
documentation/hot plug in tests/hot_plug_test_2/: Hot Plug Test 2 Notes.txt
documentation/odesc 4p2 documentation/: ODESC Part numbers.txt  ODESC_4p2 Pinout.xlsx
documentation/odesc 4p2 documentation/test/hot_plug_test_1/: Notes on hot plug test.txt
electrical/Adapter_Board_PCB/: Adapter_Board.kicad_prl  Adapter_Board.kicad_pro  Adapter_Board.kicad_sch  fp-info-cache
mechanical/: Assembly.step  Onshape Part Link.txt
mechanical/V1_Files_STL/: Encoder Shaft Adapter Sleeve.stl  Friction Circlip.stl  Front Bearing Clamp.stl  Magnet to Pendulum Axle Adapter v1.stl  Motor Test Mount.stl  Pedulum Axle To Moment Adapter.stl  Pendulum Axle to Moment Adapter 6mm shaft version.stl  Pendulum Axle to Moment Adapter V2.stl  Rear Bearing Clamp.stl  Upper Rotor Base 2p0.stl  Upper Rotor Base.stl
mechanical/V1_STEP/: Pendulum Axle to Moment Adapter 6mm shaft.step
software/: debug.dbc
software/Blank_G4_Project/: .gitmodules  CMakeLists.txt  justfile
software/Blank_G4_Project/Startup/: startup_stm32g474ceux.s
software/opendulum_sw_proj/: CMakeLists.txt  STM32G474CEUX_FLASH.ld  cubeide-gcc.cmake  justfile  opendulum.cmake
software/opendulum_sw_proj/source/: main.c  main.cpp
software/pendulum_PIO/: platformio.ini
software/pendulum_PIO/lib/Arduino-FOC/src/: BLDCMotor.cpp
software/pendulum_PIO/lib/Arduino-FOC/src/current_sense/: LowsideCurrentSense.cpp  hardware_api.h
software/pendulum_PIO/lib/Arduino-FOC/src/current_sense/hardware_specific/stm32/stm32f4/: stm32f4_hal.cpp  stm32f4_mcu.cpp
software/pendulum_PIO/src/: Biquad.hpp  config.hpp  gpio.h  main.cpp
software/pendulum_PIO/src/AS5048A/: AS5048A.cpp  AS5048A.hpp
software/pendulum_PIO/src/AS5048A_MagSenseSPI/: AS5048A_MagSenseSPI.cpp  AS5048A_MagSenseSPI.hpp
software/pendulum_PIO/src/CAN_TP/: can_tp.cpp  can_tp.hpp
software/pendulum_PIO/src/DRV8301/: drv8301.cpp  drv8301.hpp
software/pendulum_PIO/src/Drivers/ADC_Interface/: ADC_Interface.cpp  ADC_Interface.hpp  NTC_LUT.cpp  NTC_LUT.h
software/pendulum_PIO/src/Drivers/AS5048A_MagSenseSPI/: AS5048A_MagSenseSPI.cpp  AS5048A_MagSenseSPI.hpp  AS5048A_Registers.hpp
software/pendulum_PIO/src/Drivers/DRV8301_Gate_Driver/: DRV8301_Gate_Driver.cpp  DRV8301_Gate_Driver.hpp
software/pendulum_PIO/src/Drivers/SSD1357_RGB_OLED/: OLED_Graphics.cpp  OLED_Graphics.h  RGB_OLED_Screen_Settings.h  SparkFun_RGB_OLED_64x64.cpp  SparkFun_RGB_OLED_64x64.h  SparkFun_SSD1357_OLED.cpp  SparkFun_SSD1357_OLED.h
software/pendulum_PIO/src/Drivers/WS2812B_RGB_LED_Strip/: WS2812B_RGB_LED_Strip.cpp  WS2812B_RGB_LED_Strip.hpp
software/pendulum_PIO/src/Gimbal/: gimbal.cpp  gimbal.hpp
software/pendulum_PIO/src/Pendulum/: pendulum.cpp  pendulum.hpp  pendulum_comm.cpp
software/pendulum_PIO/src/RGB_Wrapper/: RGB_Utils.cpp  RGB_Utils.hpp  RGB_Wrapper.cpp  RGB_Wrapper.hpp
tools/: workspace.cangaroo
tools/Ozone Debugger Projects/: opendulum.jdebug
